@@ -3,6 +3,7 @@ Contract Configurator 1.23.2
 - Added check for old useage of partModuleType=Power (thanks muppet9876).
 - Prevent Rendezvous parameter from completing when doing an EVA (thanks pap1723).
 - Don't allow main menu to continue while still loading (prevents issues on slower systems).
+- Made RemoteTech distance function (for coverage system) more generous (thanks NathanKell).
 
 Contract Configurator 1.23.1
 - Fixed major bug with VisitWaypoint not properly setting waypoint distances (thanks Keniamin and others).
